--- a/src/scss/styles/_frontend--style.scss
+++ b/src/scss/styles/_frontend--style.scss
@@ -831,14 +831,31 @@
 }
 
 .limit {
-    left: 0;
-    right: 0;
+    left  : 0;
+    right : 0;
     bottom: 20px;
 
     @media(max-width: $mobile) {
         &__block {
             flex-direction: column;
-            align-items:flex-start;
+            align-items   : flex-start;
+        }
+    }
+}
+
+.error-page {
+    padding-top: 130px;
+    background :
+        linear-gradient(251.47deg, var(--color-primary-50) 0%, var(--color-none) 62.55%),
+        linear-gradient(251.47deg, var(--color-none) 37.45%, var(--color-second-50) 100%);
+
+    &__image {
+        max-width: 380px;
+    }
+
+    @media(max-width: $mobile) {
+        &__image {
+            max-width: 270px;
         }
     }
 }
